# black_caffe

./: .gitignore  CMakeLists.txt  Makefile
src/: Makefile  caffeine.cloc  test_caffeine
src/caffe/: blob.cpp  blob.hpp  common.cpp  common.hpp  core_layer.hpp  filler.hpp  layer.hpp  layer_factory.hpp  neuro_layer.cpp.bak  syncedmem.cpp  syncedmem.hpp  vision_layers.hpp
src/caffe/layers/: conv_layer.cpp  data_layer.cpp  dropout_layer.cu  im2col_layer.cpp  inner_product_layer.cpp  lrn_layer.cpp  lrn_layer.cu  neruon_layer.cpp  padding_layer.cu  pooling_layer.cpp  pooling_layer.cu  relu_layer.cu
src/caffe/proto/: layer_param.proto
src/caffe/test/: test_blob.cpp  test_caffe_main.hpp  test_common.cpp  test_convolution_layer.cpp  test_data_layer.cpp  test_filler.cpp  test_gradient_check_util.hpp  test_im2col_layer.cpp  test_innerproduct_layer.cpp  test_lrn_layer.cpp  test_neuron.cpp  test_padding_layer.cpp  test_platform.cpp  test_pooling_layer.cpp  test_proto.cpp  test_syncedmem.cpp  test_util_gemm.cpp
src/caffe/util/: im2col.cpp  im2col.cu  im2col.hpp  math_functions.cpp  math_functions.hpp
src/caffeine/: base.cpp  base.hpp  blob.cpp  blob.hpp  common.cpp  common.hpp  core_layer.hpp  dropout_layer.cu  filler.hpp  layer.cpp  layer.hpp  neruon_layer.cpp  neuro_layer.cpp  neuro_layer.cu  neuron_layer.cpp  relu_layer.cu  syncedmem.cpp  syncedmem.hpp  test_blob.cpp  test_caffeine.cpp  test_common.cpp  test_syncedmem.cpp  vision_layers.hpp
src/caffeine/layers/: conv_layer.cpp  dropout_layer.cu  im2col_layer.cpp  inner_product_layer.cpp  inner_product_layer.cu  lrn_layer.cpp  lrn_layer.cu  neruon_layer.cpp  padding_layer.cu  relu_layer.cu
src/caffeine/proto/: layer_param.proto  layer_param_pb2.py
src/caffeine/test/: test_blob.cpp  test_caffeine_main.cpp  test_caffeine_main.hpp  test_common.cpp  test_convolution_layer.cpp  test_filler.cpp  test_gradient_check_util.cpp  test_gradient_check_util.hpp  test_im2col_layer.cpp  test_innerproduct_layer.cpp  test_lrn_layer.cpp  test_neuron.cpp  test_padding_layer.cpp  test_proto.cpp  test_syncedmem.cpp  test_util_gemm.cpp
src/caffeine/util/: blas.cpp  blas.hpp  gemm.cpp  gemm.hpp  im2col.cpp  im2col.cu  im2col.hpp  math_functions.cpp  math_functions.hpp
src/gtest/: gtest-all.cc  gtest-all.cpp  gtest.h  gtest_main.cc
